--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "node-nvidia-smi": "^1.0.0",
     "systeminformation": "^3.33.18"
   }
 }
